<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <EditText
        android:id="@+id/edt_valueA"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/txv_operation"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        style="@style/Theme.Calculadora.ValueFields"
        />

    <TextView
        android:id="@+id/txv_operation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plus_symbol"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/edt_valueA"
        app:layout_constraintEnd_toStartOf="@id/edt_valueB"
        app:layout_constraintBaseline_toBaselineOf="@id/edt_valueA"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        />

    <EditText
        android:id="@+id/edt_valueB"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/txv_operation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/edt_valueA"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="32dp"
        style="@style/Theme.Calculadora.ValueFields"
        />

    <Button
        android:id="@+id/btn_plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plus_symbol"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_minus"
        app:layout_constraintTop_toBottomOf="@id/edt_valueA"
        android:layout_marginTop="64dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="16dp"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        style="@style/Theme.Calculadora.ButtonStyle"
        />

    <Button
        android:id="@+id/btn_minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minus_symbol"
        app:layout_constraintStart_toEndOf="@id/btn_plus"
        app:layout_constraintEnd_toStartOf="@id/btn_multiply"
        app:layout_constraintTop_toTopOf="@id/btn_plus"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        style="@style/Theme.Calculadora.ButtonStyle"
        />

    <Button
        android:id="@+id/btn_multiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/multiply_symbol"
        app:layout_constraintStart_toEndOf="@id/btn_minus"
        app:layout_constraintEnd_toStartOf="@id/btn_divide"
        app:layout_constraintTop_toTopOf="@id/btn_plus"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        style="@style/Theme.Calculadora.ButtonStyle"
        />

    <Button
        android:id="@+id/btn_divide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/divide_symbol"
        app:layout_constraintStart_toEndOf="@id/btn_multiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_plus"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="32dp"
        style="@style/Theme.Calculadora.ButtonStyle"
        />

    <Button
        android:id="@+id/btn_calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_plus"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="64dp"
        />

    <TextView
        android:id="@+id/txv_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/result"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_calculate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="32dp"
        />

    <Button
        android:id="@+id/btn_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/history_button_background"
        android:text="@string/history"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="?colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>