<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraint_itemview_container"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:orientation="horizontal">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_container"
        android:layout_width="match_parent"

        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:layout_height="64dp">


        <TextView
            android:id="@+id/txv_id"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:textStyle="bold"
            style="@style/Theme.Calculadora.HistoryItem"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/txv_valueA"

            android:gravity="center"
            android:text="@string/id"
            />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/gray"
            app:layout_constraintStart_toEndOf="@id/txv_id"
            />

        <TextView
            android:id="@+id/txv_valueA"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            style="@style/Theme.Calculadora.HistoryItem"
            app:layout_constraintStart_toEndOf="@id/txv_id"
            app:layout_constraintEnd_toStartOf="@id/txv_valueB"
            android:text="@string/value_a"
            android:textStyle="bold"
            android:gravity="center"
            />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/gray"
            app:layout_constraintStart_toEndOf="@id/txv_valueA"
            />

        <TextView
            android:id="@+id/txv_valueB"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            style="@style/Theme.Calculadora.HistoryItem"
            app:layout_constraintStart_toEndOf="@id/txv_valueA"
            app:layout_constraintEnd_toStartOf="@id/txv_operation"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/value_b"
            />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/gray"
            app:layout_constraintStart_toEndOf="@id/txv_valueB"
            />

        <TextView
            android:id="@+id/txv_operation"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            style="@style/Theme.Calculadora.HistoryItem"
            app:layout_constraintStart_toEndOf="@id/txv_valueB"
            app:layout_constraintEnd_toStartOf="@id/txv_result"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="15dp"
            android:text="@string/operation"
            />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/gray"
            app:layout_constraintStart_toEndOf="@id/txv_operation"
            />

        <TextView
            android:id="@+id/txv_result"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            style="@style/Theme.Calculadora.HistoryItem"
            app:layout_constraintStart_toEndOf="@id/txv_operation"
            app:layout_constraintEnd_toStartOf="@id/txv_date"
            android:textStyle="bold"
            android:textSize="13dp"
            android:text="@string/result"
            android:gravity="center"
            />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/gray"
            app:layout_constraintStart_toEndOf="@id/txv_result"
            />

        <TextView
            android:id="@+id/txv_date"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            style="@style/Theme.Calculadora.HistoryItem"
            app:layout_constraintStart_toEndOf="@id/txv_result"
            app:layout_constraintEnd_toEndOf="parent"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/date"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/view_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>