<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.HistoryActivity">

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="40dp"
        android:layout_height="36dp"
        android:src="@drawable/baseline_arrow_back_24"
        android:background="@android:color/transparent"
        app:tint="?colorPrimary"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        />

    <Button
        android:id="@+id/btn_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_back"
        app:layout_constraintBottom_toBottomOf="@id/btn_back"
        android:layout_marginEnd="16dp"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_container"
        android:layout_width="match_parent"
    app:layout_constraintTop_toBottomOf="@id/btn_back"

        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:paddingTop="16dp"
        android:paddingBottom="4dp"
        android:layout_height="64dp">


        <TextView
            android:id="@+id/txv_id"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:textStyle="bold"
            style="@style/Theme.Calculadora.HistoryItem"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/txv_valueA"

            android:gravity="center"
            android:text="@string/id"
            />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/gray"
            app:layout_constraintStart_toEndOf="@id/txv_id"
            />

        <TextView
            android:id="@+id/txv_valueA"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            style="@style/Theme.Calculadora.HistoryItem"
            app:layout_constraintStart_toEndOf="@id/txv_id"
            app:layout_constraintEnd_toStartOf="@id/txv_valueB"
            android:text="@string/value_a"
            android:textStyle="bold"
            android:gravity="center"
            />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/gray"
            app:layout_constraintStart_toEndOf="@id/txv_valueA"
            />

        <TextView
            android:id="@+id/txv_valueB"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            style="@style/Theme.Calculadora.HistoryItem"
            app:layout_constraintStart_toEndOf="@id/txv_valueA"
            app:layout_constraintEnd_toStartOf="@id/txv_operation"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/value_b"
            />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/gray"
            app:layout_constraintStart_toEndOf="@id/txv_valueB"
            />

        <TextView
            android:id="@+id/txv_operation"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            style="@style/Theme.Calculadora.HistoryItem"
            app:layout_constraintStart_toEndOf="@id/txv_valueB"
            app:layout_constraintEnd_toStartOf="@id/txv_result"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="15dp"
            android:text="@string/operation"
            />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/gray"
            app:layout_constraintStart_toEndOf="@id/txv_operation"
            />

        <TextView
            android:id="@+id/txv_result"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            style="@style/Theme.Calculadora.HistoryItem"
            app:layout_constraintStart_toEndOf="@id/txv_operation"
            app:layout_constraintEnd_toStartOf="@id/txv_date"
            android:textStyle="bold"
            android:textSize="13dp"
            android:text="@string/result"
            android:gravity="center"
            />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/gray"
            app:layout_constraintStart_toEndOf="@id/txv_result"
            />

        <TextView
            android:id="@+id/txv_date"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            style="@style/Theme.Calculadora.HistoryItem"
            app:layout_constraintStart_toEndOf="@id/txv_result"
            app:layout_constraintEnd_toEndOf="parent"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/date"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>



    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/constraint_container"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_history"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/constraint_container"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="4dp"
        tools:listitem="@layout/history_item"
        tools:itemCount="10"
        android:visibility="gone"
        tools:visibility="visible"
        />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/constraint_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="visible"

        />


</androidx.constraintlayout.widget.ConstraintLayout>